--- a/docs-src/assets/css/content.scss
+++ b/docs-src/assets/css/content.scss
@@ -1,4 +1,4 @@
-$turquoise: #000;
+$turquoise: #000000;
 $primary: #000000;
 $secondary: #000000;
 
@@ -9,4 +9,22 @@ $secondary: #000000;
 .nuxt-content h1 {
   @extend .title;
   @extend .is-4;
+}
+
+.nuxt-content h2 {
+  margin-top: 20px;
+  @extend .subtitle;
+  @extend .is-5;
+}
+
+.nuxt-content p {
+  margin: 5px;
+}
+
+.icon.icon-link {
+  background-image: url('~assets/svg/icon-hashtag.svg');
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-size: 20px 20px;
 }
