--- a/docs-src/assets/css/content.scss
+++ b/docs-src/assets/css/content.scss
@@ -1,14 +1,11 @@
-$turquoise: #000000;
-$primary: #000000;
-$secondary: #000000;
-
-@import '~bulma/sass/utilities/_all';
-@import '~bulma';
-@import '~buefy/src/scss/buefy';
+// @import '~bulma/sass/utilities/_all';
+// @import '~bulma';
+// @import '~buefy/src/scss/buefy';
+@import 'bulmaswatch/bulmaswatch';
 
 .nuxt-content h1 {
   @extend .title;
-  @extend .is-4;
+  @extend .is-3;
 }
 
 .nuxt-content h2 {
@@ -17,14 +14,40 @@ $secondary: #000000;
   @extend .is-5;
 }
 
-.nuxt-content p {
-  margin: 5px;
+.nuxt-content h3 {
+  margin-top: 20px;
+  @extend .subtitle;
+  @extend .is-6;
 }
 
+.nuxt-content p {
+  line-height: 2.5em;
+}
+
+article.content h2.subtitle.toc {
+  margin-top: 1em;
+  margin-bottom: 0;
+}
+
+article.content ul.toc {
+  list-style-type: none;
+  margin-left: 0.75em;
+}
+
+article.content li.toc2 {
+  color: $grey-lighter;
+}
+
+article.content li.toc3 {
+  font-size: 0.9em;
+  margin-left: 1em;
+  color: $grey-light;
+}
+
+$icon-size: 0;
 .icon.icon-link {
-  background-image: url('~assets/svg/icon-hashtag.svg');
   display: inline-block;
-  width: 20px;
-  height: 20px;
-  background-size: 20px 20px;
+  width: $icon-size;
+  height: $icon-size;
+  background-size: $icon-size $icon-size;
 }
